# Breast_Cancer_Segmentation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
breast_cancer_segmentation/: __init__.py  train_model.py
breast_cancer_segmentation/models/: UNETModel.py
breast_cancer_segmentation/predicter/: main.py  predict_model.py
breast_cancer_segmentation/trainer/: train_model.py
breast_cancer_segmentation/utils/: gcp.py
breast_cancer_segmentation/visualizations/: data_drifting.py
config/cloudbuilds/: data_drifting.yml  prediction_cd.yml
config/gcp/: config_training_cpu.yaml  config_training_gpu.yaml
config/hydra/: config_hydra.yaml
config/vertex_jobs/: config_training_cpu.yaml  config_training_gpu.yaml
data/raw/: .gitignore  BCSS.dvc  BCSS_512.dvc  make_patches_ori.py  miniBCSS.dvc
dockerfiles/: data_drifting.dockerfile  predict_model.dockerfile  train_model.dockerfile  train_model_cpu.dockerfile  train_model_gpu.dockerfile
docs/: mkdocs.yaml
docs/images/: ml-canvas.pdf:Zone.Identifier
docs/readmes/: getting_started.md  how_to_predict.md  how_to_train.md  system_req.md  to_do_list.md
docs/source/: index.md
lightning_logs/version_0/: events.out.tfevents.1704978870.thomas-VLT-WX0.15298.0
notebooks/: load_model_test.ipynb
project_name/: __init__.py
reports/: README.md
scripts/: predicter_entrypoint.sh
tests/: test_make_dataset.py  test_predict_model.py  test_train_model.py
(+87 files in other folders)
