[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "breast_cancer_segmentation"
version = "0.0.1"
description = "We perform segmentation of medical images to highlight presence of breast cancer"
authors = [
  { name = "team2", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["breast_cancer_segmentation"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
